Clean up commodity labels in item cards

--- a/Index.html
+++ b/Index.html
@@ -980,9 +980,9 @@
             Latest: <span class="${commodityClass}">${fmtCommodity(commodityValue)}</span> •
             <span class="${usdClass}">${usd != null ? fmtUsd(usd) : "—"}</span> /
             <span class="${satsClass}">${sats != null ? fmtSats(sats) : "—"}</span> /
-            <span class="${latestGoldClass}">Gold: ${latestGold}</span> /
-            <span class="${latestSilverClass}">Silver: ${latestSilver}</span> /
-            <span class="${latestMwhClass}">MWh: ${latestMwh}</span>
+            <span class="${latestGoldClass}">${latestGold}</span> /
+            <span class="${latestSilverClass}">${latestSilver}</span> /
+            <span class="${latestMwhClass}">${latestMwh}</span>
             <span>as of ${escapeHtml(latestTsLabel)}</span>
           </span>
         </div>
