--- a/Index.html
+++ b/Index.html
@@ -206,6 +206,18 @@
       padding:10px;
       background: rgba(0,0,0,.10);
     }
+    .basket-stat.infl-up{
+      border-color: rgba(251,113,133,.6);
+      box-shadow: inset 0 0 0 1px rgba(251,113,133,.12);
+    }
+    .basket-stat.infl-down{
+      border-color: rgba(52,211,153,.6);
+      box-shadow: inset 0 0 0 1px rgba(52,211,153,.12);
+    }
+    .basket-stat.infl-flat{
+      border-color: rgba(148,163,184,.6);
+      box-shadow: inset 0 0 0 1px rgba(148,163,184,.12);
+    }
     .basket-stat .label{
       font-size:12px;
       color:var(--muted);
@@ -493,6 +505,10 @@
   function fmtSats(n){
     if (!isFinite(n)) return "—";
     return Math.round(n).toLocaleString() + " sats";
+  }
+  function fmtBtc(n){
+    if (!isFinite(n)) return "—";
+    return n.toLocaleString(undefined, { maximumFractionDigits: 8 }) + " BTC";
   }
   function fmtCommodity(n){
     if (!isFinite(n)) return "—";
@@ -1464,13 +1480,24 @@
       const last = [...series].reverse().find(val => isFinite(val));
       const inflation = getInflationPctFromSeries(series);
       const inflCls = inflation >= 0 ? "bad" : "good";
+      const boxCls = inflation > 0 ? "infl-up" : (inflation < 0 ? "infl-down" : "infl-flat");
+      const lastSats = mode.id === "sats"
+        ? [...satsSeries].reverse().find(val => isFinite(val))
+        : null;
+      const btcValue = isFinite(lastSats) ? lastSats / 100000000 : NaN;
       return `
-        <div class="basket-stat">
+        <div class="basket-stat ${boxCls}">
           <div class="label">${escapeHtml(mode.label)}</div>
           <div class="metric">
             <div>Basket index</div>
             <strong>${escapeHtml(fmtCommodityForMode(last, mode.id))}</strong>
           </div>
+          ${mode.id === "sats" ? `
+          <div class="metric">
+            <div>BTC equivalent</div>
+            <strong>${escapeHtml(fmtBtc(btcValue))}</strong>
+          </div>
+          ` : ""}
           <div class="metric">
             <div>Inflation vs baseline</div>
             <strong class="${inflCls}">${inflation.toFixed(2)}%</strong>
